--- a/packages/alfred/Alfred.alfredpreferences/preferences/local/cddd64ce651d8d10d489fe408c249739e538334e/keyboard/prefs.plist
+++ b/packages/alfred/Alfred.alfredpreferences/preferences/local/cddd64ce651d8d10d489fe408c249739e538334e/keyboard/prefs.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>locale</key>
-	<string>com.apple.keylayout.ABC</string>
+	<string>com.google.inputmethod.Japanese.Roman</string>
 </dict>
 </plist>
