--- a/packages/neovim/.config/nvim/coc-settings.json
+++ b/packages/neovim/.config/nvim/coc-settings.json
@@ -46,6 +46,6 @@
   "eslint.autoFixOnSave": true,
   "eslint.run": "onSave",
   "htmldjango.djlint.lintOnSave": true,
-  "python.formatting.autopep8Path": "/usr/local/bin/autopep8",
-  "python.pythonPath": "/usr/local/bin/python3"
+  "python.formatting.autopep8Path": "/usr/bin/autopep8",
+  "python.pythonPath": "/usr/bin/python3"
 }
