--- a/packages/git/.gitconfig
+++ b/packages/git/.gitconfig
@@ -21,7 +21,7 @@ me = merge
 mem = merge -m
 ; co = checkout
 ; cob = checkout -b
-ps = push
+ps = push -u
 pl = pull
 lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 lga = log --graph --all --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
