--- a/packages/git/.gitconfig
+++ b/packages/git/.gitconfig
@@ -15,14 +15,8 @@ cmm = commit -m
 sw = switch
 swc = switch -c
 st = status
-br = branch
-brd= branch -d
-me = merge
-mem = merge -m
-; co = checkout
-; cob = checkout -b
+br = branch -vv
 ps = push -u
-pl = pull
 lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 lga = log --graph --all --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 
