--- a/packages/iterm2/com.googlecode.iterm2.plist
+++ b/packages/iterm2/com.googlecode.iterm2.plist
@@ -1200,7 +1200,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>HackNerdFontComplete-Bold 17</string>
+			<string>HackNF-Bold 17</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<false/>
 			<key>Option Key Sends</key>
